<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.weather.WeatherFragment" android:background="#7290B9">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/textInputLayout"
            android:layout_width="360dp"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            android:background="@color/textFieldColor"
            android:elevation="2dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settingsContainer">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/changeCityInput"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/enter_location"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45999998" />

        <Button
                android:id="@+id/changeCityOk"
                android:layout_width="44dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:width="10dp"
                android:height="10dp"
                android:text="@android:string/ok"
                android:textColor="@color/okButtonTextColor"
                android:background="@color/textFieldColor"
                style="?android:attr/borderlessButtonStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/changeCityInput"
                app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/settingsContainer"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="32dp"
            android:gravity="top"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

        <ToggleButton
                android:id="@+id/degreesTypeToggle"
                android:layout_width="84dp"
                android:layout_height="35dp"

                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"

                android:background="@drawable/toggle_switch"
                android:textOff=""
                android:textOn=""

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/settingsDegreeSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/degree_symbol"
                android:textColor="@color/secondaryTextColor"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/degreesTypeToggle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.15" />

        <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/mainTextColor"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/changeCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:clickable="true"
                android:text="@string/change_city"
                android:textColor="@color/secondaryTextColor"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.669" />

        <ImageView
                android:id="@+id/myLocationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34dp"
                android:src="@drawable/location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/myLocation" />

        <TextView
                android:id="@+id/myLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:clickable="true"
                android:text="@string/my_location"
                android:textColor="@color/secondaryTextColor"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/weatherContainer"
            android:layout_width="315dp"
            android:layout_height="315dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@+id/additionalInfoContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsContainer"
            app:layout_constraintVertical_bias="0.554">

        <TextView
                android:id="@+id/weatherDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/mainTextColor"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherIcon" />

        <TextView
                android:id="@+id/weatherDegrees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lato_light"
                android:textColor="@color/mainTextColor"
                android:textSize="100sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/weatherIcon"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />
    </android.support.constraint.ConstraintLayout>
    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:id="@+id/additionalInfoContainer"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/weatherContainer">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/windContainer"
                android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
                android:orientation="vertical">
            <TextView
                    android:text="@string/wind_header"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/windHeader"
                    android:layout_marginBottom="8dp"/>

            <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor"
                    android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/pressureContainer"
                android:layout_alignParentTop="false"
                android:orientation="vertical"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_alignStart="@+id/rainPossibilityContainer">
            <TextView
                    android:text="@string/pressure_header"
                    android:textSize="18sp"
                    android:textColor="@color/secondaryTextColor"
                    android:layout_width="wrap_content" android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content" android:id="@+id/pressureHeader"/>

            <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor"
                    android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/moistureContainer"
                android:layout_alignParentLeft="true" android:layout_alignParentBottom="true"
                android:orientation="vertical">
            <TextView
                    android:text="@string/moisture_header"
                    android:textSize="18sp"
                    android:textColor="@color/secondaryTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/moistureHeader"
                    android:layout_marginBottom="8dp"/>

            <TextView
                    android:id="@+id/moisture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor"
                    android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rainPossibilityContainer"
                android:layout_alignParentRight="true" android:layout_alignParentBottom="true"
                android:orientation="vertical">
            <TextView
                    android:textSize="18sp"
                    android:textColor="@color/secondaryTextColor"
                    android:text="@string/rain_possibility_header"
                    android:layout_width="wrap_content" android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content" android:id="@+id/rainPossibilityHeader"/>

            <TextView
                    android:id="@+id/rainPossibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor"
                    android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
